| Bug #18491 | cluster: node restart with pending dropeed events causes failed restart | ||
|---|---|---|---|
| Submitted: | 24 Mar 2006 16:50 | Modified: | 5 Apr 2006 6:44 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[24 Mar 2006 16:50]
Tomas Ulin
[27 Mar 2006 16:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4197
[27 Mar 2006 17:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4198
[4 Apr 2006 10:06]
Tomas Ulin
pushed to 5.1.8
[5 Apr 2006 6:44]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.8 changelog; closed.
